---
source: cubesql/src/compile/test/test_introspection.rs
expression: "execute_query(r#\"\n            SELECT *\n            FROM pg_cast\n            ORDER BY oid\n            \"#.to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+-----+------------+------------+----------+-------------+------------+------+
| oid | castsource | casttarget | castfunc | castcontext | castmethod | xmin |
+-----+------------+------------+----------+-------------+------------+------+
+-----+------------+------------+----------+-------------+------------+------+
